Fixing mobile bug in blockSettings style
If session length or break length was set to 20 the 0 would be partly cut off by the button margin

--- a/src/styles/components/_BlockSettings.scss
+++ b/src/styles/components/_BlockSettings.scss
@@ -15,7 +15,7 @@
 }
 
 .block-display-text {
-  font-size: $l-size;
+  font-size: $ml-size;
   font-weight: bold;
   text-align: center;
   width: $xxl-size;
@@ -25,5 +25,10 @@
   .label {
     font-size: $xl-size;
     margin-bottom: $m-size;
+  }
+
+  .block-display-text {
+    font-size: $l-size;
+    width: $xxl-size;
   }
 }
